# quote_system

./: .gitignore  pyproject.toml
quote_app/quote_app/: db.sqlite3  manage.py
quote_app/quote_app/data/: Final Assembly.STEP  csv20250125_142246.csv
quote_app/quote_app/data/csv/: csv20250218_181820.csv  csv20250220_143741.csv  csv20250227_193235.csv  csv20250227_223509.csv  csv20250301_132813.csv
quote_app/quote_app/quote/: admin.py  models.py  settings.py  urls.py  views.py  views_respaldo2.py  views_respaldo3.py
quote_app/quote_app/quote/migrations/: 0001_initial.py  0002_materialdensity_alter_company_address_and_more.py  0003_material_prices_restructure.py  0004_alter_materialdensity_density.py  0005_alter_materialdensity_options_and_more.py  0006_populate_material_names.py
quote_app/quote_app/quote/services/: __init__.py  email_service.py  excel_quote_generator.py  excel_quote_generator_backup.py  excel_to_pdf.py  excel_to_pdf_converter.py  pdf_conversion_service.py  quote_generator.py
quote_app/quote_app/quote/templates/: base.html
quote_app/quote_app/quote/templatetags/: quote_filters.py
quote_app/quote_app/quote/views/: __init__.py  basic_views.py  file_views.py  quote_views.py  (+1 more)
quote_app/quote_app/quote_app/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
quote_app/quote_app/session/: admin.py  forms.py  urls.py  views.py
quote_app/quote_app/templates/: base.html
quote_app/quote_app/utils/: __init__.py  step_analyzer.py
tests/: excel_to_pdf.py  quote_pdf.py  travel.py  travel2.py
tests/data/: quote_template.docx  quote_template.xlsx
(+20 files in other folders)
