[tool.poetry]
name = "quote-app"
version = "0.1.0"
description = ""
authors = ["luis314159 <luis.14xbox@live.com.mx>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"
uvicorn = "^0.34.0"
trimesh = "^4.6.0"
numpy = "^2.2.2"
pandas = "^2.2.3"
cascadio = "^0.0.15"
scipy = "^1.15.1"
fsspec = "^2024.12.0"
django-crispy-forms = "^2.3"
crispy-tailwind = "^1.0.3"
reportlab = "^4.2.5"
whitenoise = "^6.8.2"
python-dotenv = "^1.0.1"
openpyxl = "^3.1.5"
weasyprint = "^64.1"
docx = "^0.2.4"
python-docx = "^1.1.2"
docx2pdf = "^0.1.8"
mammoth = "^1.9.0"
spire-doc = "^13.1.0"
spire-xls = "^14.12.0"
fpdf = "^1.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
